docs: update roadmap 2025

--- a/docs/roadmap/2025.md
+++ b/docs/roadmap/2025.md
@@ -10,7 +10,8 @@
 * [ ] 集成数据库文档生成工具：screw
 
 ## 低代码模块
-* [ ] repository 从设计上，支持“有些数据库有，另一些数据库没有的 sql 语法”的业务查询兼容模式
+* [ ] repository 从设计上，支持“有些数据库有，另一些数据库没有的 sql 语法”的业务查询兼容模式，以便能在支持特定 sql 语法的数据库上直接执行 sql，提高性能。首先实现 CTE 递归查询。
+  - 生成领域模型时，需要新增层级字段，包括 level（层级）、id_hierarchical_path（id层级路径）、xxx_hierarchical_path（自定义字段层级路径）
   - 例如 repository 新增一个递归查询组层级记录的接口，如果数据库支持 sql 标准的 cte 递归语法，则直接使用 cte 查询，否则在 repository 定义通用的实现方式
   - 支持 CTE 的数据库有 Teradata, DB2, Firebird, Microsoft SQL Server, Oracle (with recursion since 11g release 2), PostgreSQL (since 8.4), MariaDB (since 10.2), SQLite (since 3.8.3), HyperSQL and H2 (experimental), MySQL8.0.
   - 需要判断数据库版本，是否支持某些特性，以便在 repository 中选择不同的实现方式
@@ -36,5 +37,7 @@
     FROM org_structure
     ORDER BY level, emp_id;  
     ```
+* [ ] criteria 查询条件支持分组，支持复杂的查询条件组合，例如：(a=1 and b=2) or (c=3 and d=4)
+
 ## 构建(Q3)
 * [ ]  打通 GraalVM 技术路线，集成 GraalVM 编译，支持生成原生镜像 
