docs: update roadmap 2024

--- a/docs/roadmap/2024.md
+++ b/docs/roadmap/2024.md
@@ -30,7 +30,7 @@
 
 ### 3.1、底层设计(Q3)
 
-* [ ]  新增v3通用接口，结合 DDD 重新设计实现
+* [ ]  新增低代码子模块，并把迁移 v1 , v2 迁移进来；新增 v3 接口，结合 DDD 重新设计实现
   - 可在数据库字段增加注释，描述各表/字段之间的关系，便于框架分析生成领域对象
 * [ ]  支持自定义实体(非自动生成的实体)继承和实现v3系列接口，主要是能够实现查询条件接口，能统一非标实体的分页查询，排序查询等条件规范
 * [ ]  优化分页对象的选用，使用自定义分页对象或 spring 的分页对象
@@ -56,14 +56,12 @@
   - 例如用户传递 /auth-service/user?username=&age=10 时，是需要查询 username 为空的情况，还是不需要过滤 username 字段
 * [ ]  查询接口新增支持主从表关联查询(一对一和一对多)，支持查询主表时，自动关联从表查询。
 
-## 4、配置(Q4)
+## 4、其他(Q4)
 
+* [ ]  回顾常用开源许可证协议，将 isass 在用的协议修改为更宽松的协议
 * [ ]  配置文件统一改为 toml 格式，合并原来的 yml 和 properties 文件。toml 文件放到 resources/config 目录下
   - [toml官网](https://toml.io/cn)
   - [聊一聊TOML](https://zhuanlan.zhihu.com/p/31306361)
-
-## 5、构建(Q4)
-
 * [ ]  利用好 docker 分层技术，使 docker 镜像在集群环境中拉取时体积更小，提升部署效率。
   - 研究对比 springboot3 提供的 docker 集成方式，选择使用原生的 dockerfile 还是 springboot3 提供的 docker 集成方式
   - 取消 fat jar 的构建包方式，改为 lib 外置（需确认这个 docker layer 是否会被复用）
